--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "main": "index.js",
   "engines": {
     "node": "v10.16.3",
-    "npm": "6.13.4"
+    "npm": "6.14.3"
   },
   "scripts": {
     "start": "node index.js",
-    "backend": "nodemon index.js"
+    "backend": "nodemon index.js",
+    "frontend": "npm run start --prefix client",
+    "dev": "concurrently \"npm run backend\"  \"npm run start --prefix client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "13": "0.0.0",
     "body-parser": "^1.19.0",
     "dialogflow": "^1.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "concurrently": "^4.1.0"
   }
 }
