--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "backend": "nodemon index.js",
-    "frontend": "npm run start --prefix client",
-    "dev": "concurrently \"npm run backend\"  \"npm run start --prefix client\""
+    "backend": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +20,6 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
-    "concurrently": "^4.1.0"
+    "nodemon": "^2.0.2"
   }
 }
