--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "body-parser": "^1.19.0",
   "dialogflow": "^1.2.0",
   "dialogflow-fulfillment": "^0.6.1",
+  "ejs": "^3.0.1",
   "express": "^4.17.1",
   "for": "^0.1.0",
   "google-oauth-jwt": "^0.2.0",
@@ -42,21 +43,22 @@
   "worked": "0.0.2"
  },
  "devDependencies": {
-  "nodemon": "^2.0.2",
-  "concurrently": "^5.0.0",
-  "http-proxy-middleware": "^0.20.0",
-  "scripts": {
-   "test": "echo \"Error: no test specified\" && exit 1"
+  "bugs": {
+   "url": "https://github.com/mambrosio/reactbotgit/issues"
   },
+  "concurrently": "^5.0.0",
+  "description": "",
+  "homepage": "https://github.com/mambrosio/reactbotgit#readme",
+  "http-proxy-middleware": "^0.20.0",
+  "keywords": [],
+  "nodemon": "^2.0.2",
   "repository": {
    "type": "git",
    "url": "https://github.com/mambrosio/reactbotgit.git"
   },
-  "keywords": [],
-  "bugs": {
-   "url": "https://github.com/mambrosio/reactbotgit/issues"
+  "scripts": {
+   "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/mambrosio/reactbotgit#readme",
-  "description": ""
+  "ws": "3.3.2"
  }
 }
