--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "main": "index.js",
  "engines": {
   "yarn": "1.x",
-  "node": "v13.11.1",
+  "node": "v12.16.x",
   "npm": "6.x"
  },
  "scripts": {
